--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div id="about">
         <div class="row">
             <div class="about-col-1">
-                <img src="RashmithaSs.jpg" alt=" image" >
+                <img src="images/RashmithaSs.jpg" alt=" image" >
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
