--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     </div>
                 </div>
                 <div class="work">
-                    <img src="Build-Your-Portfolio.png" alt="portfolio">
+                    <img src="images/Build-Your-Portfolio.png" alt="portfolio">
                     <div class="layer">
                         <h2>Credit Card Fraud Detection</h2>
                         <p>Includes modeling past credit card transactions with knowledge of fraudulent ones to identify new fraudulent 
