--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <h1 class="sub-title">My Projects</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="myntra.jpg" alt="myntra">
+                    <img src="images/myntra.jpg" alt="myntra">
                     <div class="layer">
                         <h2>Myntra clone app</h2>
                         <p>A Myntra clone app created using HTML, CSS, and JavaScript is essentially a basic e-commerce platform 
