--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         </div>
                 </div>
                 <div class="work">
-                    <img src="credit card.jpg" alt="credit">
+                    <img src="images/credit card.jpg" alt="credit">
                     <div class="layer">
                         <h2>Credit Card Fraud Detection</h2>
                         <p>Includes modeling past credit card transactions with knowledge of fraudulent ones to identify new fraudulent 
